[fix] fix application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,7 @@ spring:
         format_sql: true
         #default_batch_fetch_size: 100
     #open-in-view: false
+    database-platform: org.hibernate.dialect.MySQL5Dialect
 
   data:
     web:
