--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:4400/itamin?characterEncoding=utf8
+    url: jdbc:mysql://localhost:4400/itamin?characterEncoding=utf8&serverTimezone=Asia/Seoul
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
