--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
       TZ: Asia/Seoul
+      SPRING_PROFILES_ACTIVE: deploy
     ports:
       - 8080:8080
     container_name: itamin-server
