--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,45 +1,13 @@
-## ???
-#spring:
-#  datasource:
-#    url: jdbc:mysql://localhost:4400/itamin?characterEncoding=utf8
-#    username: root
-#    password: root
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        show_sql: true
-#        format_sql: true
-#        #default_batch_fetch_size: 100
-#    #open-in-view: false
-#    database-platform: org.hibernate.dialect.MySQL5Dialect
-#
-#  data:
-#    web:
-#      pageable:
-#        default-page-size: 10
-#        max-page_size: 2000
-#        #one-indexed-parameters: true
-#
-#  profiles:
-#    include: oauth
-#  session:
-#    store-type: jdbc
-#
-#  redis:
-#    host: localhost
-#    port: 6379
-#
-#logging.level:
-#  org.hibernate.SQL: debug
-#  org.hibernate.type: trace
+spring:
+  profiles:
+    active: dev
 
-## ???
+---
 
 spring:
+  profiles: dev
+  session:
+    store-type: jdbc
   datasource:
     url: jdbc:mysql://localhost:4400/itamin?characterEncoding=utf8&serverTimezone=Asia/Seoul
     username: root
@@ -65,13 +33,59 @@ spring:
         default-page-size: 10
         max-page_size: 2000
 
-  profiles:
-    include: oauth
+  redis:
+    host: localhost
+    port: 6379
+
+logging.level:
+  org.hibernate.SQL: debug
+  org.hibernate.type: trace
+
+cloud:
+  aws:
+    s3:
+      bucket: itamin-backend-images
+    credentials:
+      access-key: AKIAXUHC6GFVDFVR3GQM
+      secret-key: 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
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
+
+---
+
+spring:
+  profiles: prod
   session:
     store-type: jdbc
+  datasource:
+    url: jdbc:mysql://localhost:4400/itamin?characterEncoding=utf8&serverTimezone=Asia/Seoul
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+    database-platform: org.hibernate.dialect.MySQL5Dialect
+
+  data:
+    web:
+      pageable:
+        default-page-size: 10
+        max-page_size: 2000
 
   redis:
-    host: redis
+    host: localhost
     port: 6379
 
 logging.level:
