--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,7 +1,6 @@
 spring:
   profiles:
     active: test
-    include: oauth
     session:
       store-type: jdbc
   datasource:
@@ -30,7 +29,7 @@ spring:
         max-page_size: 2000
 
   redis:
-    host: redis
+    host: localhost
     port: 6379
 
 logging.level:
