--- a/scripts/itamin-database/db/conf/my.cnf
+++ b/scripts/itamin-database/db/conf/my.cnf
@@ -11,3 +11,4 @@ port                           = 4400
 character-set-client-handshake = FALSE
 character-set-server           = utf8mb4
 collation-server               = utf8mb4_unicode_ci
+default-time-zone=Asia/Seoul
