chore(II-37): Change port number from 8080 to 80

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,6 +59,8 @@ cloud:
     stack:
       auto: false
 
+server:
+  port: 80
 ---
 
 spring:
@@ -115,3 +117,6 @@ cloud:
       static: ap-northeast-2
     stack:
       auto: false
+
+server:
+  port: 80
