--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -20,6 +20,9 @@ spring:
         show_sql: true
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
+  batch:
+    jdbc:
+      initialize-schema: always
 
   data:
     web:
