--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,9 @@ spring:
 ---
 
 spring:
-  profiles: dev
+  config:
+    activate:
+      on-profile: dev
   session:
     store-type: jdbc
   datasource:
@@ -17,7 +19,6 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
   jpa:
     hibernate:
       ddl-auto: create
@@ -36,6 +37,8 @@ spring:
   redis:
     host: localhost
     port: 6379
+  batch:
+    initialize-schema: always
 
 logging:
   level:
@@ -60,11 +63,21 @@ cloud:
       auto: false
 
 server:
-  port: 80
+  port: 8080
+
+open:
+  api:
+    public:
+      data:
+        servicekey: PQLtqPl3CME2IOY0ut05BWzjQvcFjo%2FyWKlWX08NG3fiJEjaoaqWhXqvM9nZryw8JHqXnQrdeSjZLfGr1Iny0A%3D%3D
+      publicRentalHouse:
+        url: https://data.myhome.go.kr/rentalHouseList
 ---
 
 spring:
-  profiles: prod
+  config:
+    activate:
+      on-profile: prod
   session:
     store-type: jdbc
   datasource:
@@ -95,6 +108,8 @@ spring:
   redis:
     host: redis
     port: 6379
+  batch:
+    initialize-schema: always
 
 logging:
   level:
@@ -120,3 +135,11 @@ cloud:
 
 server:
   port: 80
+
+open:
+  api:
+    public:
+      data:
+        servicekey: PQLtqPl3CME2IOY0ut05BWzjQvcFjo%2FyWKlWX08NG3fiJEjaoaqWhXqvM9nZryw8JHqXnQrdeSjZLfGr1Iny0A%3D%3D
+      publicRentalHouse:
+        url: https://data.myhome.go.kr/rentalHouseList
