--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -32,6 +32,7 @@ services:
   application:
     image: itamin-backend
     environment:
+      JAVA_OPTS: -Djasypt.encryptor.password=tkfkd1617!
       SPRING_DATASOURCE_URL: jdbc:mysql://db:4400/itamin?useUnicode=true&characterEncoding=utf8
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
