--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,25 +92,25 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         show_sql: true
         format_sql: true
     database-platform: org.hibernate.dialect.MySQL5Dialect
-
   data:
     web:
       pageable:
         default-page-size: 10
         max-page_size: 2000
-
   redis:
     host: redis
     port: 6379
+  batch:
+    jdbc:
+      initialize-schema: always
 
 logging:
   level:
