--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 
     implementation 'org.mockito:mockito-inline:4.6.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 tasks.named('test') {
