[fix] fix naverLogin using Spring Security And JWT

--- a/scripts/itamin-database/db/conf/my.cnf
+++ b/scripts/itamin-database/db/conf/my.cnf
@@ -12,3 +12,4 @@ character-set-client-handshake = FALSE
 character-set-server           = utf8mb4
 collation-server               = utf8mb4_unicode_ci
 default-time-zone=Asia/Seoul
+sql_mode=STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION
